Apply B2B support
Route all CDS API calls through /o/<orgId> instead of /t/<tenant>,
hardcoding the org UUID constant. Also fixes Java 8 compat issues
(readAllBytes, String.isBlank).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>